@@ -72,6 +72,7 @@ where XXXXXX is the bug number as listed below.
 201435  Fix Darwin: -v does not show kernel version
 210028  ppc32: Unhandled instruction vmhraddshs
         = 338095
+211256  Fixed an outdated comment regarding the default platform.
 211926  Avoid compilation warnings in valgrind.h with -pedantic
 226609  Crediting upstream authors in man page
 231257  Valgrind omits path when executing script from shebang line
